<resources>
    <string name="app_name">Locurrences</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_create_event">Create Event</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>

    <string-array name="notification_times">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>24 hours</item>
    </string-array>

    <string-array name="app_themes">
        <item>Theme 1</item>
        <item>Theme 2</item>
        <item>Theme 3</item>
        <item>Theme 4</item>
        <item>Theme 5</item>
    </string-array>

    <string-array name="event_categories">
        <item>Local Culture</item>
        <item>Social Activism</item>
        <item>Popular Culture</item>
        <item>Community Outreach</item>
        <item>Education and Learning</item>
        <item>Shopping and Market</item>
        <item>Miscellaneous</item>
    </string-array>

    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Navigation Drawer Titles-->
    <string name="discover_baltimore">Discover Baltimore</string>
    <string name="my_event_board">My Event Board</string>
    <string name="event_map">Event Map</string>
    <string name="manage_events">Manage My Events</string>
    <string name="title_activity_event_map">Map</string>
    <string name="settings">Settings</string>
    <string name="event_categories">Event Categories</string>

    <!-- manage my events strings -->
    <string name="liveTab">live</string>
    <string name="historyTab">history</string>
    <string name="draftsTab">drafts</string>
    <string name="title_activity_maps">Map</string>

    <!-- Event Categories -->
    <string name="local_culture"> Local Culture </string>
    <string name="social_activism"> Social Activism </string>
    <string name="popular_culture"> Popular Culture </string>
    <string name="community_outreach"> Community Outreach </string>
    <string name="education_and_learning"> Education &amp; Learning </string>
    <string name="shopping_and_markets"> Shopping &amp; Market Events </string>
    <string name="miscellaneous"> Miscellaneous </string>

    <string name="local_culture_desc"> Explore Baltimores unique culture! </string>
    <string name="social_activism_desc"> Stand up for a cause!</string>
    <string name="popular_culture_desc"> Find concerts and other entertainment! </string>
    <string name="community_outreach_desc"> Give back to your community! </string>
    <string name="education_and_learning_desc"> Explore new interests! </string>
    <string name="shopping_and_markets_desc"> Support local vendors and businesses! </string>
    <string name="miscellaneous_desc"> Discover all there is to discover! </string>

    <!-- Locations -->
    <string name="baltimore"> Baltimore </string>
    <string name="menu_duplicate">duplicate</string>
    <string name="menu_delete">delete</string>

    <string name="event_name">Event Name</string>
    <string name="event_location">Event Location</string>
    <string name="event_details">Event Details</string>
    <string name="need_volunteers">Need Volunteers</string>
    <string name="add_picture">Add Picture</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="facebook">Facebook</string>
    <string name="website">Website</string>
    <string name="zip">Zip Code</string>

    <string name="registration_title">Registration</string>
    <string name="title_activity_registration">Registration Title</string>

    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="past_events">Past Events</string>
    <string name="draft_events">Drafts</string>

    <string name="create">Create</string>
    <string name="cancel">Cancel</string>

    <!-- Event Board Stuff -->
    <string name="eg_event_board_desc"> Eat our food. Listen to their music. Meet your future friends. </string>

    <!-- Other Stuff -->
    <string name="select_type">Select Event Type</string>
    <string name="menu_edit">edit</string>
    <string name="menu_open">open</string>

    <!-- Event Attributes -->
    <string-array name="event_attributes">
        <item>Free Admission</item>
        <item>Alcohol Available</item>
        <item>Live Entertainment</item>
        <item>Parking</item>
        <item>Family Friendly</item>
        <item>Networking Opportunities</item>
        <item>Food Available</item>
        <item>Indoor Activities</item>
        <item>Music Available</item>
        <item>Outdoor Activities</item>
        <item>Free Item Giveaways</item>
        <item>Pet Friendly</item>
        <item>Local Vendors Attending</item>
        <item>Seating Available</item>
        <item>Public Transit</item>
        <item>Admission Required</item>
        <item>For a Good Cause</item>
        <item>Volunteers Needed</item>
        <item>Key Note Speaker</item>
    </string-array>


</resources>