<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:fillViewport="true"
    android:id="@+id/activity_create_event"
    tools:context="com.uima.event_app.CreateEventActivity">

<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_event_name"
        android:inputType="text"
        android:text="@string/event_name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_event_location"
        android:inputType="text"
        android:text="@string/event_location"/>

    <DatePicker
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:id="@+id/event_date">
    </DatePicker>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_event_details"
        android:text="@string/event_details"/>

    <TimePicker
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/event_start_time">
    </TimePicker>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/need_volunteers"
        android:text="@string/need_volunteers"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/create_event_type"
        android:background="@color/colorPrimary"
        android:prompt="@string/select_type">
    </Spinner>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:maxHeight="55dp"
            android:maxWidth="55dp"
            android:layout_height="55dp"
            android:layout_width="55dp"
            android:id="@+id/create_image"
            android:src="@drawable/camera"
            android:layout_gravity="center"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:id="@+id/create_add_image"
            android:text="@string/add_picture"/>

    </LinearLayout>

    <!-- Tentative List View Here! -->

    <ListView
        android:id="@+id/event_attribute_list_view"
        android:layout_height="fill_parent"
        android:layout_width="match_parent"
        android:layout_margin="15dp">
    </ListView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/create_event"
            android:background="@color/colorAccent"
            android:text="@string/create"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_margin="15dp"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/cancel_event"
            android:background="@color/colorPrimary"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_margin="15dp"/>

    </LinearLayout>

</LinearLayout>
</ScrollView>